Fixed text mode buttons overflowing off the screen when the screen width is small

--- a/web/style.css
+++ b/web/style.css
@@ -177,6 +177,7 @@ label.separate_input {
 .input_row {
     position: relative;
     display: flex;
+    flex-flow: wrap;
     flex-direction: row;
     align-items: center;
     gap: 2vh;
